Tue Mar 13 03:46:38 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - clients/upsc.c, man/upsc.8: added "list UPS names" functionality to upsc,
   and updated the man page.

Mon Mar 12 20:29:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: fix endless loop (missing break statement
   causing connect() to retry always instead of skipping to the next
   addrinfo element)

Sun Mar 11 04:10:17 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/apc-hid.c: added UPS on/off status (from Back-UPS LS 500).

Sat Mar 10 18:54:33 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: fix for models that return a string meaning there
   is no temperature value available.

Sat Mar 10 16:50:01 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite-hid.c: add productid 4002 for SmartOnline SU6000RT4U
   (experimental)

Thu Mar  8 18:58:23 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.c: forgot to increase version number and try to cancel
   battery test before reporting the low battery status

Thu Mar  8 18:54:38 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - configure.in: fix tests for solaris libraries

Mon Mar  5 14:49:25 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: if one of --with-user or --with-group is given, then
   make the other one mandatory. Updated docs/configure.txt.

Mon Mar  5 10:05:28 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.ch: stop battery test if LB is reached (will not be done
   automatically by some devices), fix mixed up system/battery test commands

Mon Mar  5 10:03:57 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - configure.in: change the default group to "nobody" (more in line with
   previous behaviour)

Mon Mar 5 08:15:00 UTC 2007 / Jon Gough <jon.gough@eclipsesystems.com.au>

 - man/megatec_usb.8: Updated man page to show which commands have been implemented.