@@ -1,3 +1,8 @@
+Wed Mar 14 16:33:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
+
+ - server/access.h: fix broken IN6_IS_ADDR_V4MAPPED macro for glibc 2.1
+   and earlier
+
 Tue Mar 13 03:46:38 UTC 2007 / Charles Lepple <clepple@gmail.com>
 
  - clients/upsc.c, man/upsc.8: added "list UPS names" functionality to upsc,
